# lifeBot

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: release.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.svelte
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.local.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/lib/: api.ts
apps/web-server/: Cargo.toml
apps/web-server/src/: main.rs
crates/core/: Cargo.toml
crates/core/migrations/: 001_initial.sql  003_sentinel.sql  004_sling_integration.sql
crates/core/src/: db.rs  import.rs  lib.rs  models.rs  scheduling.rs  seed.rs  sentinel.rs  service.rs  validate.rs
crates/core/tests/: import_tests.rs  scheduling_edge_cases.rs
docs/: architecture.md  future-openclaw-integration.md  future-sling-integration.md  sentinel.md
docs/_saved_integration_revert_snapshot/: App.svelte.with-integrations  api.ts.with-integrations  models.rs.with-integrations  service.rs.with-integrations  shared-types.index.ts.with-integrations  tauri-lib.rs.with-integrations
fixtures/sling/: mock-schedule.json
scripts/dev/: desktop.sh  web.sh
scripts/seed/: demo.sh
workers/cv/: cv_worker.py  requirements.txt
