[package]
name = "lifebot-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
reqwest.workspace = true
tokio.workspace = true
lifebot-policies = { path = "../../packages/policies" }
lifebot-sling = { path = "../../packages/providers/sling" }
